Changing gitignore and a little other thing

--- a/Capitoli/Descrizione_approfondita.tex
+++ b/Capitoli/Descrizione_approfondita.tex
@@ -7,7 +7,7 @@
 \chapter{Descrizione approfondita dell'argomento}
 \label{cap:descrizione}
 %************************************************
-
+\section{Problema da risolvere}
 \lipsum[1]
 
 \section{Descrizione di QGis}
