--- a/Tesi.tex
+++ b/Tesi.tex
@@ -12,6 +12,7 @@
 \documentclass[10pt,%                      % corpo del font principale
                a4paper,%                   % carta A4
                twoside,openright,%         % fronte-retro
+               draft,
 %              oneside,openany,%           % solo fronte
 			   $•$
                ]{book}
@@ -90,8 +91,8 @@
 \input{MaterialeInizialeFinale/Colophon}
 \input{MaterialeInizialeFinale/Dedica}
 \input{MaterialeInizialeFinale/Indici}
-\input{MaterialeInizialeFinale/Sommario+Abstract}
-\input{MaterialeInizialeFinale/Ringraziamenti}
+%TODO \input{MaterialeInizialeFinale/Sommario+Abstract}
+%TODO \input{MaterialeInizialeFinale/Ringraziamenti}
 \cleardoublepage
 %******************************************************************
 % Materiale principale
