Working on frontpage and bib
Working on the bib file and the frontpage

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -1,16 +1,31 @@
-@book{knuth:art,
-    author    = {Knuth, Donald Ervin},
-    title     = {Computer Programming as an Art},
-    volume    = {3},
-    publisher = {Addison-Wesley},
-    year      = {1973},
-    address   = {Reading (Massachusetts)}
+% Encoding: UTF-8
+
+
+@Manual{latex:bibliografia,
+  Title                    = {L'arte di gestire la bibliografia con \LaTeX},
+  Author                   = {Lorenzo Pantieri},
+  Year                     = {2009},
+  URL                      = {http://www.lorenzopantieri.net/LaTeX_files/Bibliografia.pdf}
 }
 
+@Manual{pantieri:arte,
+  Title                    = {L'arte di scrivere con \LaTeX},
+  Author                   = {Pantieri, Lorenzo and Gordini, Tommaso},
+  Year                     = {2011},
+  URL                      = {http://www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}
+}
 
-@manual{pantieri:arte, 
-	author    = {Pantieri, Lorenzo and Gordini, Tommaso},
-	title     = {L'arte di scrivere con \LaTeX}, 
-	year      = {2011},
-	url       = {http://www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}
+@Book{python:programmingpython,
+  Title                    = {Programming Python},
+  Author                   = {Mark Lutz},
+  Editor                   = {O'Reilly},
+  Publisher                = {O'Reilly},
+  Year                     = {2011}
+}
+
+@MastersThesis{tesi:ambientale,
+  Title                    = {Metodi e strumenti per la costruzione di territori virtuali per l'applicazione di modelli e di scenari ambientali},
+  Author                   = {Michele Zen},
+  School                   = {Università Ca Foscari Venezia},
+  Year                     = {2013/2014}
 }
