--- a/MaterialeInizialeFinale/Introduzione.tex
+++ b/MaterialeInizialeFinale/Introduzione.tex
@@ -11,15 +11,6 @@
 
 \chapter*{Introduzione}
 
-\lipsum[1]
+In questa tesi viene spiegato come è stato realizzato un plugin per QGis per il calcolo del terreno eroso avendo dei dati geomorfici legati al territorio scelto. Questi dati comprendono la conformazione del terreno, le precipitazioni registrate nell'area, il tipo di copertura della vegetazione e il numero di anni per cui questa previsione viene eseguita.
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-\begin{description}
-\item[{\hyperref[cap:lorem]{Il primo capitolo}}]
-offre una visione d'insieme della storia di \LaTeX{} e ne vengono presentate le idee di fondo.
-\item[{\hyperref[cap:ipsum]{Il secondo capitolo}}]
-spiega le operazioni, veramente semplici, per installare \LaTeX{} sul proprio calcolatore.
-\item[{\hyperref[cap:dolor]{L'appendice A}}] descrive  sinteticamente le principali norme tipografiche della lingua italiana, utili nella composizione di articoli, tesi o libri.
-\end{description}
-
-\lipsum[2]
+Questo plugin è stato scritto in Python e implementa il plugin teorizzato nella tesi \cite{tesi:ambientale}
