--- a/Tesi.tex
+++ b/Tesi.tex
@@ -52,7 +52,7 @@
 
 \usepackage{mparhack,fixltx2e,relsize}     % finezze tipografiche
 
-\usepackage[style=philosophy-modern,hyperref,backref,square,natbib]{biblatex}
+\usepackage[style=alphabetic,backend=bibtex]{biblatex}
                                            % eccellente pacchetto per la bibliografia;
                                            % produce uno stile di citazione autore-anno;
                                            % lo stile "numeric-comp" produce riferimenti numerici
