--- a/MaterialeInizialeFinale/Introduzione.tex
+++ b/MaterialeInizialeFinale/Introduzione.tex
@@ -13,4 +13,4 @@
 
 In questa tesi viene spiegato come è stato realizzato un plugin per QGis per il calcolo del terreno eroso avendo dei dati geomorfici legati al territorio scelto. Questi dati comprendono la conformazione del terreno, le precipitazioni registrate nell'area, il tipo di copertura della vegetazione e il numero di anni per cui questa previsione viene eseguita.
 
-Questo plugin è stato scritto in Python e implementa il plugin teorizzato nella tesi \cite{tesi:ambientale}
+Questo plugin è stato scritto in Python e implementa il plugin ipotizzato nella tesi \cite{tesi:ambientale} che, anche se la tesi è legata all'area geografica del Veneto, risulta essere indipendente e utilizzabile per il calcolo su una qualunque area geografica di cui si hanno i dati richiesti.
