Fixing url biblio
Fixing the url of a link in the biblio

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -23,12 +23,14 @@
   Year                     = {2011}
 }
 
-@Link{site:qgis,
-  URL                      = {http://www.qgis.org/it/}
+@Online{site:cc3,
+  Comment                  = {Licenza Creative Commons tipo 3},
+  URL                      = {http://creativecommons.org/licenses/by-sa/3.0/}
 }
 
-@Link{site:cc3,
-  URL                      = {http://creativecommons.org/licenses/by-sa/3.0/}
+@Online{site:qgis,
+  Comment                  = {QGis sito ufficiale},
+  URL                      = {http://www.qgis.org/it/}
 }
 
 @MastersThesis{tesi:ambientale,
@@ -37,3 +39,4 @@
   School                   = {Università Ca Foscari Venezia},
   Year                     = {2013/2014}
 }
+
