Little change to the Descrizione
Change some little things into Descrizione

--- a/Capitoli/Descrizione_approfondita.tex
+++ b/Capitoli/Descrizione_approfondita.tex
@@ -40,10 +40,16 @@ In particolare sono state utilizzate le componenti di gestione input e output de
 
 Altro dettaglio molto utile di QGis è il fatto che un programma multi piattaforma. Questo vuol dire che il programma è stato distribuito per più sistemi operativi\footnote{In questo caso per Android, Mac OS, Windows e Linux} e obbliga gli sviluppatori a scrivere plugin e script che siano anch'essi multipiattaforma. Questo permette l'utilizzo dei plugin e degli script per la creazione di funzioni automatizzate utilizzando le componenti già presenti in QGis o aggiungerne di nuove.
 
-In oltre, QGis supporta la totalità dei formati open di file che  raster e layer  
+In oltre, QGis supporta la quasi totalità dei formati open source utilizzati per la codifica per dati geomorfici e georeferenziati in modo nativo mentre i formati di file che non supporta sono utilizzabili attraverso plugin gratuiti disponibili online.
 
 \subsection{Descrizione dei tipi di dati supportati}
 
+I formati di dati possono essere divisi in tre macrocategorie in base a come vengono forniti:
+\begin{itemize}
+	\item Vettoriali
+	\item Raster
+	\item DBRMS con estensione spaziale
+\end{itemize}
 
 
 \subsection{Architettura di QGis}
