--- a/Tesi.tex
+++ b/Tesi.tex
@@ -101,5 +101,5 @@
 %******************************************************************
 \backmatter
 \input{MaterialeInizialeFinale/Bibliografia}
-\input{MaterialeInizialeFinale/Dichiarazione}
+% \input{MaterialeInizialeFinale/Dichiarazione}
 \end{document}
