Add part about gui

--- a/Capitoli/Realizzazione.tex
+++ b/Capitoli/Realizzazione.tex
@@ -33,6 +33,12 @@ Al momento della progettazione dell'applicazione è stato necessario pensare com
 
 \end{itemize}
 
+Per come è strutturato QGis è possibile avere entrambi implementati nel plugin ma è stato preferito dare maggiore attenzione alla componente grafica anche se è comunque possibile aprire il terminale di QGis ed eseguire dei comandi. 
+
+In particolare in questa applicazione è stata implementata l'interfaccia grafica in quanto risulta molto più adatta all'uso effettivo dell'applicazione. 
+
+% TODO inserire qui immagine
+
 
 
 \subsubsection{Qt4}
