Adding library basic part

--- a/Capitoli/Descrizione_approfondita.tex
+++ b/Capitoli/Descrizione_approfondita.tex
@@ -12,7 +12,7 @@ modo corretto l'erosione del territorio nell'area geografica scielta.
 Questo è stato fatto utilizzando un modello RUSLE basato sull'equazione\footnote{Il
 modello proposto è quello indicato in \cite[p.~37]{tesi:ambientale}}
 
-\begin{equation}
+\begin{equation}\label{eq:main}
 A = R * K * LS * C * P
 \end{equation}
 
